--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
 	
 	There's a picture on the back of the note..<br><br>
-	<img class="border" src="media/images/sneak1.png"><br><br>
+	<img class="border" src="media/images/sneak1.PNG"><br><br>
 	
 	
 	Slightly less disappointed, you put away the box.<br><br>
